# $Id$

2008-12-26	Ivan Y. Khvostishkov

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
	preserve object's persistence during manipulations with identity map;
	unit test for covering such change.

2008-12-24	Vladlen Y. Koshelev

	* core/Base/Assert.class.php: isEmpty(), isNotEmpty() added (ported from
	trunk).

	* meta/types/ObjectType.class.php: lazy required property getter checks for
	property's id.

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php: check for
	empty id in getById().

2008-12-21	Vladlen Y. Koshelev

	* main/Criteria/Criteria.class.php, test/main/CriteriaTest.class.php:
	addProjection() and corresponding tests added.

	* main/Criteria/Projections/ProjectionChain.class.php: isEmpty() added.

2008-12-18	Konstantin V. Arkhipov

	* core/Cache/AggregateCache.class.php: restore true randomness upon
	exit from guessLabel().

2008-12-18	Vladlen Y. Koshelev

	* core/Form/RegulatedForm.class.php: ruleExists() added.

2008-12-16	Vladlen Y. Koshelev

	* main/Flow/DecoratorController.class.php: controller's decorator added,
	which may be commonly used for request filters.

2008-12-01	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetektor.class.php: mobile request
	detektor added.

2008-11-21	Vladlen Y. Koshelev

	* main/UnifiedContainer/ManyToManyLinkedWorker.class.php: fixed duplicate
	join error occured when custom criteria has joiner on container's helper
	table.

2008-11-19	Vladlen Y. Koshelev

	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
	fetching collection.

2008-09-22	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: do not fetch collections for empty
	lists, spotted by <alexeydsov@gmail.com>.

2008-09-02	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveEnumeration.class.php: getList() fixed.

2008-08-30	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: mark peer as dead on link's failure.

2008-08-28	Konstantin V. Arkhipov
